src/App.css
/* ... */
.gridImage{
 height:100%;
 width:100%;
 top:0px;
 position:absolute;
 opacity:0.5;
 object-fit:cover;
}

.bgImage{
  width:100vw;
  height:100vh;
  object-fit:cover;
  filter:saturate(0);
  mix-blend-mode:multiply;
  opacity:0.6;
}


.AboutLanding:after {
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  opacity:0.85;
  background: linear-gradient(to right, rgba(97, 16, 22, 0.3) 0%, rgba(97, 16, 22, 0.3)), linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5));
  pointer-events: none;
  mix-blend-mode:multiply;
}

.grid-container {
  width:calc(80vw - 4rem);
  display: grid;
  grid-template-columns: auto auto;
  grid-row-gap: 2rem;
  grid-column-gap: 2.5rem;

}

.grid-container-mobile {
  width:100vw;
  display: grid;
  grid-template-columns: 3;
  align-content: stretch;
  height:var(--mobileheight);
}


.grid-book {
  grid-row-start: 1;
  grid-row-end: 3;
}

.grid {
  position:relative;
}


.grid-rl:after {
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  background: var(--works-gradient-rl);
  pointer-events: none;
  mix-blend-mode:multiply;
}


.grid-rl-hover:after{
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  background-image:var(--works-hover-gradient-rl);
  pointer-events: none;
  mix-blend-mode:multiply;
}

.grid-lr:after {
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  background: var(--works-gradient-lr);
  pointer-events: none;
  mix-blend-mode:multiply;

}

.grid-lr-hover:after {
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  background-image: var(--works-hover-gradient-lr);
  mix-blend-mode:multiply;
  pointer-events: none;
}


.mobile-nav-lr:after{
  background-image:var(--mobile-nav-gradient-lr);
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.mobile-nav-rl:after{
  background-image:var(--mobile-nav-gradient-rl);
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.mobile-nav-rl-hover:after{
  background:var(--mobile-nav-hover-gradient-rl);
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.mobile-nav-lr-hover:after{
  background:var(--mobile-nav-hover-gradient-lr);
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.carousel-gradient:after{
  background:var(--carousel-gradient);
  mix-blend-mode: multiply;
  position: absolute;
  bottom: 0;
  left:0;
  content:'';
  height: 100%;
  width: 100%;
  pointer-events: none;
}

.boxDecoration-navMobileBottom:after{
  border:2px solid var(--velvet);
  border-radius:2px;
  height:0.8rem;
  width:25vw;
  margin:1.5rem 0;
  position: absolute;
  z-index: 50;
  bottom:-2rem;
  left:calc(37.5vw);
  content:'';
  pointer-events: none;
}


.boxDecoration-navMobileTop:before{
  border:2px solid var(--velvet);
  border-radius:2px;
  height:0.8rem;
  width:25vw;
  margin:1.5rem 0;
  position: absolute;
  z-index: 50;
  top:-2rem;
  left:calc(37.5vw);
  content:'';
  pointer-events: none;
}


.boxDecoration{
  border:1.5px solid var(--midnight);
  border-radius:2px;
  height:0.6rem;
  width:4rem;
  margin:1.5rem 0;
}

label{
  font:1.2rem/1.5 "Lusitana", serif;
  align-self: flex-start;
  margin-top: 0.5rem;
}

form input{
  font:1rem/1.5 "Lusitana", serif;
  border-radius: 3px;
  border: 1.5px solid var(--contact-text);
  background: var(--cinerous);
  text-align: left;
  height: 1.8rem;
  color:var(--midnight);
  padding: 0 0.5rem;
}

a:focus {
  text-decoration: underline;
}

form  input::placeholder{
  text-align: center;
  padding: 0.1rem 0.5rem;
}


form  input:focus{
  border: 1.5px solid var(--highlight);
  outline-offset:3.5px;
  outline: 1.5px solid var(--highlight);
}

textarea{
  font:1rem/1.5 "Lusitana", serif;
  border-radius: 3px;
  border: 1.5px solid var(--contact-text);
  background: var(--cinerous);
  text-align: left;
  color:var(--midnight);
  padding: 0.3rem 0.5rem;

}

textarea:focus{
  border: 1.5px solid var(--highlight);
  outline-offset:3.5px;
  outline: 1.5px solid var(--highlight);
}

textarea::placeholder{
  padding: 0.3rem 0.5rem;
  outline: none !important;
  opacity:0.75;
}

.contactBtn{
  background:var(--desert-rose);
  color:var(--contact-text);
  border:none;
  padding:0.5rem 2rem;
}

.contactBtn:focus{
  border: 2px solid var(--highlight);
  outline: none !important;
}


.modalBtn{
background:var(--table-neutral);
color:var(--table-dark);
border:none;
padding:0.5rem 2rem;
}

.modalBtn:hover{
color:var(--velvet);
outline: none !important;
border: none;
}

.carouselBtn{
background: none;
border:none;
color:var(--cinerous);
padding:0.5rem;
opacity:0.8rem;
transform:scaleY(1.1);
padding:0 1.5rem;
transition-duration:0.3s;
}

.carouselBtn:hover{
color:var(--velvet);
transform:scaleY(1.3);
outline: none !important;
border: none;
transition-duration :0.3s;

}


.modalCloseBtn{
  background:var(--velvet);
  color:var(--cinerous);
  outline: none !important;
  border: none;
}

.modalCloseBtn:hover{
  background:var(--desert-rose);
  color:var(--table-neutral);
  outline: none !important;
  border: none;
}

.modalBtn:focus{
  outline: none !important;
}

button:active{
  transform: scale(0.94);
}

button{
  cursor: pointer;
}

.mainImage-desktop::before{
background:  url(./components/works/projects/sections/images/triangle-desktop.svg) top left/100% auto no-repeat;
content: '';
position: absolute;
z-index:20;
top: -1px;
left: -1px;
width: 100vw;
height: calc(100% + 2px);
box-sizing: border-box;
border: 0;
font-size: 100%;
line-height: 100%;
}
/* ... */

